fix front page arrow overflowing and bottom grid responsiveness 7/17/23

--- a/grid-customization.css
+++ b/grid-customization.css
@@ -10,10 +10,8 @@
 }
 
 .grid-container{
-
     width: 90%;
     height: 90%;
-    /* margin: 5rem; */
     
     display: grid;
     gap: 1.2rem;
@@ -27,6 +25,8 @@
 .grid-item > img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    
     border-radius: .5rem;
     z-index: -1;
     transition: all .5s;
@@ -105,4 +105,15 @@
 .grid-cs-4{
     grid-row-end: span 2;
     grid-column-end: span 2;
+}
+
+@media (max-width: 1000px){
+    .grid-container{
+        grid-template-columns: none;
+        grid-template-rows: none;
+    }
+    .grid-item{
+        grid-row-end: span 3 !important;
+        grid-column-end: span 3 !important;
+    }
 }
