--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ body{
     width: 100%; 
     z-index: -1;
     transition: all .5s;
+    object-fit: cover;
 }
 .all-front-page:hover > .front-page > img{
     filter: brightness(40%);
@@ -134,17 +135,19 @@ body{
     justify-content: space-between;
 }
 #left-arrow{
-    position: relative;
-    left: .1%;
-    top:35%;
     width: 5rem;
     height: 5rem;
     transform: rotate(180deg);
     transition: all .5s;
 }
 #buttons-holder{
-    width: 100vw;
-    height: 50vh;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 #left-arrow:hover{
     background-color: rgba(255, 255, 255, 0.678);
@@ -155,9 +158,6 @@ body{
     transition: all .5s;
 }
 #right-arrow{
-    position: relative;
-    left:87.9%;
-    top:35%;
     width: 5rem;
     height: 5rem;
     transform: rotate(0deg);
@@ -191,7 +191,7 @@ button{
 }
 
 
-@media (max-width: 650px){
+@media (max-width: 1000px){
     .nav-links{
         display: none;
     }
@@ -215,30 +215,5 @@ button{
     .nav-links.active{
         display: flex;
         width: 100%;
-    }
-}
-
-@media (max-width: 768px){
-    #buttons-holder{
-        width: 89.2vw;
-        height: 50vh;
-    }
-}
-@media (max-width: 425px){
-    #buttons-holder{
-        width: 70vw;
-        height: 50vh;
-    }
-}
-@media (max-width: 375px){
-    #buttons-holder{
-        width: 64vw;
-        height: 50vh;
-    }
-}
-@media (max-width: 320px){
-    #buttons-holder{
-        width: 55vw;
-        height: 50vh;
     }
 }
